@@ -13,20 +13,18 @@ my $builder = Module::Build->new(
    dist_version_from => 'lib/Metabrik.pm',
    requires => {
       'perl' => '5.6.1',
-      'local::lib' => 0,
       'Class::Gomor' => 0,
-      'IO::All' => 0,
+      'Cwd' => 0,
       'Data::Dump' => 0,
+      'File::Find' => 0,
+      'File::HomeDir' => 0,
+      'IO::All' => 0,
       'Lexical::Persistence' => 0,
       'Module::Reload' => 0,
-      'File::HomeDir' => 0,
-      'Term::Shell' => 0,
+      'PPI' => 0,
       'Term::ANSIColor' => 0,
       'Term::ReadLine::Gnu' => 0,
-      'File::Find' => 0,
-      'IPC::Run3' => 0,
-      'Cwd' => 0,
-      'PPI' => 0,
+      'Term::Shell' => 0,
    },
    configure_requires => {
       'Module::Build' => 0,
