@@ -27,14 +27,12 @@
             "File::Find" : "0",
             "File::HomeDir" : "0",
             "IO::All" : "0",
-            "IPC::Run3" : "0",
             "Lexical::Persistence" : "0",
             "Module::Reload" : "0",
             "PPI" : "0",
             "Term::ANSIColor" : "0",
             "Term::ReadLine::Gnu" : "0",
             "Term::Shell" : "0",
-            "local::lib" : "0",
             "perl" : "v5.6.1"
          }
       }
@@ -43,9 +41,6 @@
       "Metabrik" : {
          "file" : "lib/Metabrik.pm",
          "version" : "1.20"
-      },
-      "Metabrik::Brik::Search" : {
-         "file" : "lib/Metabrik/Brik/Search.pm"
       },
       "Metabrik::Core::Context" : {
          "file" : "lib/Metabrik/Core/Context.pm",
@@ -61,25 +56,6 @@
       },
       "Metabrik::Core::Shell" : {
          "file" : "lib/Metabrik/Core/Shell.pm",
-         "version" : "1.20"
-      },
-      "Metabrik::Perl::Module" : {
-         "file" : "lib/Metabrik/Perl/Module.pm"
-      },
-      "Metabrik::Shell::Command" : {
-         "file" : "lib/Metabrik/Shell/Command.pm",
-         "version" : "1.20"
-      },
-      "Metabrik::Shell::History" : {
-         "file" : "lib/Metabrik/Shell/History.pm",
-         "version" : "1.20"
-      },
-      "Metabrik::Shell::Rc" : {
-         "file" : "lib/Metabrik/Shell/Rc.pm",
-         "version" : "1.20"
-      },
-      "Metabrik::Shell::Script" : {
-         "file" : "lib/Metabrik/Shell/Script.pm",
          "version" : "1.20"
       }
    },
